infobox uniform spacing (bug 1058498)

--- a/src/media/css/infobox.styl
+++ b/src/media/css/infobox.styl
@@ -19,10 +19,14 @@
 
         li {
             float: left;
-            margin: 15px 0 0;
+            margin: 10px 0 0 0;
             min-height: inherit;
             padding-right: 5px;
             width: 50%;
+
+            &:nth-child(even) {
+                padding: 0 0 0 5px;
+            }
         }
         a {
             display: block;
